// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`split-button [snapshot] > wcag2aaa (contrast, lg) 1`] = `
<div>
  <div
    aria-expanded="false"
    aria-haspopup="menu"
    class="vesper-split-button"
    data-state="closed"
    id="radix-_r_45_"
    type="button"
  >
    <button
      class="vesper-button vesper-button-lg vesper-button-contrast"
    >
      button text
    </button>
    <button
      aria-label="Toggle menu"
      class="vesper-button vesper-button-lg vesper-button-contrast vesper-icon-button"
    >
      <span
        class="vesper-button-icon"
      >
        <svg
          class="vesper-split-button-caret-down"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.05859 8L10.8984 14.8291L13.1016 14.8291L19.9414 8L21 9.05664L13.7217 16.3242L10.2783 16.3242L3 9.05664L4.05859 8Z"
            fill="currentColor"
          />
        </svg>
        <svg
          class="vesper-split-button-caret-up"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19.9414 16.3242L13.1016 9.49512L10.8984 9.49512L4.05859 16.3242L3 15.2676L10.2783 8L13.7217 8L21 15.2676L19.9414 16.3242Z"
            fill="currentColor"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`split-button [snapshot] > wcag2aaa (contrast, lg, disabled) 1`] = `
<div>
  <div
    aria-expanded="false"
    aria-haspopup="menu"
    class="vesper-split-button"
    data-state="closed"
    id="radix-_r_4e_"
    type="button"
  >
    <button
      class="vesper-button vesper-button-lg vesper-button-disabled"
      disabled=""
    >
      button text
    </button>
    <button
      aria-label="Toggle menu"
      class="vesper-button vesper-button-lg vesper-button-disabled vesper-icon-button"
      disabled=""
    >
      <span
        class="vesper-button-icon"
      >
        <svg
          class="vesper-split-button-caret-down"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.05859 8L10.8984 14.8291L13.1016 14.8291L19.9414 8L21 9.05664L13.7217 16.3242L10.2783 16.3242L3 9.05664L4.05859 8Z"
            fill="currentColor"
          />
        </svg>
        <svg
          class="vesper-split-button-caret-up"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19.9414 16.3242L13.1016 9.49512L10.8984 9.49512L4.05859 16.3242L3 15.2676L10.2783 8L13.7217 8L21 15.2676L19.9414 16.3242Z"
            fill="currentColor"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`split-button [snapshot] > wcag2aaa (contrast, lg, disabled, open) 1`] = `
<div
  aria-hidden="true"
  data-aria-hidden="true"
>
  <div
    aria-controls="radix-_r_4h_"
    aria-expanded="true"
    aria-haspopup="menu"
    class="vesper-split-button"
    data-state="open"
    id="radix-_r_4g_"
    type="button"
  >
    <button
      class="vesper-button vesper-button-lg vesper-button-disabled"
      disabled=""
    >
      button text
    </button>
    <button
      aria-label="Toggle menu"
      class="vesper-button vesper-button-lg vesper-button-disabled vesper-icon-button"
      disabled=""
    >
      <span
        class="vesper-button-icon"
      >
        <svg
          class="vesper-split-button-caret-down"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.05859 8L10.8984 14.8291L13.1016 14.8291L19.9414 8L21 9.05664L13.7217 16.3242L10.2783 16.3242L3 9.05664L4.05859 8Z"
            fill="currentColor"
          />
        </svg>
        <svg
          class="vesper-split-button-caret-up"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19.9414 16.3242L13.1016 9.49512L10.8984 9.49512L4.05859 16.3242L3 15.2676L10.2783 8L13.7217 8L21 15.2676L19.9414 16.3242Z"
            fill="currentColor"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`split-button [snapshot] > wcag2aaa (contrast, lg, open) 1`] = `
<div
  aria-hidden="true"
  data-aria-hidden="true"
>
  <div
    aria-controls="radix-_r_48_"
    aria-expanded="true"
    aria-haspopup="menu"
    class="vesper-split-button"
    data-state="open"
    id="radix-_r_47_"
    type="button"
  >
    <button
      class="vesper-button vesper-button-lg vesper-button-contrast"
    >
      button text
    </button>
    <button
      aria-label="Toggle menu"
      class="vesper-button vesper-button-lg vesper-button-contrast vesper-icon-button"
    >
      <span
        class="vesper-button-icon"
      >
        <svg
          class="vesper-split-button-caret-down"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.05859 8L10.8984 14.8291L13.1016 14.8291L19.9414 8L21 9.05664L13.7217 16.3242L10.2783 16.3242L3 9.05664L4.05859 8Z"
            fill="currentColor"
          />
        </svg>
        <svg
          class="vesper-split-button-caret-up"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19.9414 16.3242L13.1016 9.49512L10.8984 9.49512L4.05859 16.3242L3 15.2676L10.2783 8L13.7217 8L21 15.2676L19.9414 16.3242Z"
            fill="currentColor"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`split-button [snapshot] > wcag2aaa (contrast, md) 1`] = `
<div>
  <div
    aria-expanded="false"
    aria-haspopup="menu"
    class="vesper-split-button"
    data-state="closed"
    id="radix-_r_3j_"
    type="button"
  >
    <button
      class="vesper-button vesper-button-md vesper-button-contrast"
    >
      button text
    </button>
    <button
      aria-label="Toggle menu"
      class="vesper-button vesper-button-md vesper-button-contrast vesper-icon-button"
    >
      <span
        class="vesper-button-icon"
      >
        <svg
          class="vesper-split-button-caret-down"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.05859 8L10.8984 14.8291L13.1016 14.8291L19.9414 8L21 9.05664L13.7217 16.3242L10.2783 16.3242L3 9.05664L4.05859 8Z"
            fill="currentColor"
          />
        </svg>
        <svg
          class="vesper-split-button-caret-up"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19.9414 16.3242L13.1016 9.49512L10.8984 9.49512L4.05859 16.3242L3 15.2676L10.2783 8L13.7217 8L21 15.2676L19.9414 16.3242Z"
            fill="currentColor"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`split-button [snapshot] > wcag2aaa (contrast, md, disabled) 1`] = `
<div>
  <div
    aria-expanded="false"
    aria-haspopup="menu"
    class="vesper-split-button"
    data-state="closed"
    id="radix-_r_3s_"
    type="button"
  >
    <button
      class="vesper-button vesper-button-md vesper-button-disabled"
      disabled=""
    >
      button text
    </button>
    <button
      aria-label="Toggle menu"
      class="vesper-button vesper-button-md vesper-button-disabled vesper-icon-button"
      disabled=""
    >
      <span
        class="vesper-button-icon"
      >
        <svg
          class="vesper-split-button-caret-down"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.05859 8L10.8984 14.8291L13.1016 14.8291L19.9414 8L21 9.05664L13.7217 16.3242L10.2783 16.3242L3 9.05664L4.05859 8Z"
            fill="currentColor"
          />
        </svg>
        <svg
          class="vesper-split-button-caret-up"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19.9414 16.3242L13.1016 9.49512L10.8984 9.49512L4.05859 16.3242L3 15.2676L10.2783 8L13.7217 8L21 15.2676L19.9414 16.3242Z"
            fill="currentColor"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`split-button [snapshot] > wcag2aaa (contrast, md, disabled, open) 1`] = `
<div
  aria-hidden="true"
  data-aria-hidden="true"
>
  <div
    aria-controls="radix-_r_3v_"
    aria-expanded="true"
    aria-haspopup="menu"
    class="vesper-split-button"
    data-state="open"
    id="radix-_r_3u_"
    type="button"
  >
    <button
      class="vesper-button vesper-button-md vesper-button-disabled"
      disabled=""
    >
      button text
    </button>
    <button
      aria-label="Toggle menu"
      class="vesper-button vesper-button-md vesper-button-disabled vesper-icon-button"
      disabled=""
    >
      <span
        class="vesper-button-icon"
      >
        <svg
          class="vesper-split-button-caret-down"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.05859 8L10.8984 14.8291L13.1016 14.8291L19.9414 8L21 9.05664L13.7217 16.3242L10.2783 16.3242L3 9.05664L4.05859 8Z"
            fill="currentColor"
          />
        </svg>
        <svg
          class="vesper-split-button-caret-up"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19.9414 16.3242L13.1016 9.49512L10.8984 9.49512L4.05859 16.3242L3 15.2676L10.2783 8L13.7217 8L21 15.2676L19.9414 16.3242Z"
            fill="currentColor"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`split-button [snapshot] > wcag2aaa (contrast, md, open) 1`] = `
<div
  aria-hidden="true"
  data-aria-hidden="true"
>
  <div
    aria-controls="radix-_r_3m_"
    aria-expanded="true"
    aria-haspopup="menu"
    class="vesper-split-button"
    data-state="open"
    id="radix-_r_3l_"
    type="button"
  >
    <button
      class="vesper-button vesper-button-md vesper-button-contrast"
    >
      button text
    </button>
    <button
      aria-label="Toggle menu"
      class="vesper-button vesper-button-md vesper-button-contrast vesper-icon-button"
    >
      <span
        class="vesper-button-icon"
      >
        <svg
          class="vesper-split-button-caret-down"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.05859 8L10.8984 14.8291L13.1016 14.8291L19.9414 8L21 9.05664L13.7217 16.3242L10.2783 16.3242L3 9.05664L4.05859 8Z"
            fill="currentColor"
          />
        </svg>
        <svg
          class="vesper-split-button-caret-up"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19.9414 16.3242L13.1016 9.49512L10.8984 9.49512L4.05859 16.3242L3 15.2676L10.2783 8L13.7217 8L21 15.2676L19.9414 16.3242Z"
            fill="currentColor"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`split-button [snapshot] > wcag2aaa (contrast, sm) 1`] = `
<div>
  <div
    aria-expanded="false"
    aria-haspopup="menu"
    class="vesper-split-button"
    data-state="closed"
    id="radix-_r_31_"
    type="button"
  >
    <button
      class="vesper-button vesper-button-sm vesper-button-contrast"
    >
      button text
    </button>
    <button
      aria-label="Toggle menu"
      class="vesper-button vesper-button-sm vesper-button-contrast vesper-icon-button"
    >
      <span
        class="vesper-button-icon"
      >
        <svg
          class="vesper-split-button-caret-down"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.05859 8L10.8984 14.8291L13.1016 14.8291L19.9414 8L21 9.05664L13.7217 16.3242L10.2783 16.3242L3 9.05664L4.05859 8Z"
            fill="currentColor"
          />
        </svg>
        <svg
          class="vesper-split-button-caret-up"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19.9414 16.3242L13.1016 9.49512L10.8984 9.49512L4.05859 16.3242L3 15.2676L10.2783 8L13.7217 8L21 15.2676L19.9414 16.3242Z"
            fill="currentColor"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`split-button [snapshot] > wcag2aaa (contrast, sm, disabled) 1`] = `
<div>
  <div
    aria-expanded="false"
    aria-haspopup="menu"
    class="vesper-split-button"
    data-state="closed"
    id="radix-_r_3a_"
    type="button"
  >
    <button
      class="vesper-button vesper-button-sm vesper-button-disabled"
      disabled=""
    >
      button text
    </button>
    <button
      aria-label="Toggle menu"
      class="vesper-button vesper-button-sm vesper-button-disabled vesper-icon-button"
      disabled=""
    >
      <span
        class="vesper-button-icon"
      >
        <svg
          class="vesper-split-button-caret-down"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.05859 8L10.8984 14.8291L13.1016 14.8291L19.9414 8L21 9.05664L13.7217 16.3242L10.2783 16.3242L3 9.05664L4.05859 8Z"
            fill="currentColor"
          />
        </svg>
        <svg
          class="vesper-split-button-caret-up"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19.9414 16.3242L13.1016 9.49512L10.8984 9.49512L4.05859 16.3242L3 15.2676L10.2783 8L13.7217 8L21 15.2676L19.9414 16.3242Z"
            fill="currentColor"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`split-button [snapshot] > wcag2aaa (contrast, sm, disabled, open) 1`] = `
<div
  aria-hidden="true"
  data-aria-hidden="true"
>
  <div
    aria-controls="radix-_r_3d_"
    aria-expanded="true"
    aria-haspopup="menu"
    class="vesper-split-button"
    data-state="open"
    id="radix-_r_3c_"
    type="button"
  >
    <button
      class="vesper-button vesper-button-sm vesper-button-disabled"
      disabled=""
    >
      button text
    </button>
    <button
      aria-label="Toggle menu"
      class="vesper-button vesper-button-sm vesper-button-disabled vesper-icon-button"
      disabled=""
    >
      <span
        class="vesper-button-icon"
      >
        <svg
          class="vesper-split-button-caret-down"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.05859 8L10.8984 14.8291L13.1016 14.8291L19.9414 8L21 9.05664L13.7217 16.3242L10.2783 16.3242L3 9.05664L4.05859 8Z"
            fill="currentColor"
          />
        </svg>
        <svg
          class="vesper-split-button-caret-up"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19.9414 16.3242L13.1016 9.49512L10.8984 9.49512L4.05859 16.3242L3 15.2676L10.2783 8L13.7217 8L21 15.2676L19.9414 16.3242Z"
            fill="currentColor"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`split-button [snapshot] > wcag2aaa (contrast, sm, open) 1`] = `
<div
  aria-hidden="true"
  data-aria-hidden="true"
>
  <div
    aria-controls="radix-_r_34_"
    aria-expanded="true"
    aria-haspopup="menu"
    class="vesper-split-button"
    data-state="open"
    id="radix-_r_33_"
    type="button"
  >
    <button
      class="vesper-button vesper-button-sm vesper-button-contrast"
    >
      button text
    </button>
    <button
      aria-label="Toggle menu"
      class="vesper-button vesper-button-sm vesper-button-contrast vesper-icon-button"
    >
      <span
        class="vesper-button-icon"
      >
        <svg
          class="vesper-split-button-caret-down"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.05859 8L10.8984 14.8291L13.1016 14.8291L19.9414 8L21 9.05664L13.7217 16.3242L10.2783 16.3242L3 9.05664L4.05859 8Z"
            fill="currentColor"
          />
        </svg>
        <svg
          class="vesper-split-button-caret-up"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19.9414 16.3242L13.1016 9.49512L10.8984 9.49512L4.05859 16.3242L3 15.2676L10.2783 8L13.7217 8L21 15.2676L19.9414 16.3242Z"
            fill="currentColor"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`split-button [snapshot] > wcag2aaa (subtle, lg) 1`] = `
<div>
  <div
    aria-expanded="false"
    aria-haspopup="menu"
    class="vesper-split-button"
    data-state="closed"
    id="radix-_r_2f_"
    type="button"
  >
    <button
      class="vesper-button vesper-button-lg vesper-button-subtle"
    >
      button text
    </button>
    <button
      aria-label="Toggle menu"
      class="vesper-button vesper-button-lg vesper-button-subtle vesper-icon-button"
    >
      <span
        class="vesper-button-icon"
      >
        <svg
          class="vesper-split-button-caret-down"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.05859 8L10.8984 14.8291L13.1016 14.8291L19.9414 8L21 9.05664L13.7217 16.3242L10.2783 16.3242L3 9.05664L4.05859 8Z"
            fill="currentColor"
          />
        </svg>
        <svg
          class="vesper-split-button-caret-up"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19.9414 16.3242L13.1016 9.49512L10.8984 9.49512L4.05859 16.3242L3 15.2676L10.2783 8L13.7217 8L21 15.2676L19.9414 16.3242Z"
            fill="currentColor"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`split-button [snapshot] > wcag2aaa (subtle, lg, disabled) 1`] = `
<div>
  <div
    aria-expanded="false"
    aria-haspopup="menu"
    class="vesper-split-button"
    data-state="closed"
    id="radix-_r_2o_"
    type="button"
  >
    <button
      class="vesper-button vesper-button-lg vesper-button-disabled"
      disabled=""
    >
      button text
    </button>
    <button
      aria-label="Toggle menu"
      class="vesper-button vesper-button-lg vesper-button-disabled vesper-icon-button"
      disabled=""
    >
      <span
        class="vesper-button-icon"
      >
        <svg
          class="vesper-split-button-caret-down"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.05859 8L10.8984 14.8291L13.1016 14.8291L19.9414 8L21 9.05664L13.7217 16.3242L10.2783 16.3242L3 9.05664L4.05859 8Z"
            fill="currentColor"
          />
        </svg>
        <svg
          class="vesper-split-button-caret-up"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19.9414 16.3242L13.1016 9.49512L10.8984 9.49512L4.05859 16.3242L3 15.2676L10.2783 8L13.7217 8L21 15.2676L19.9414 16.3242Z"
            fill="currentColor"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`split-button [snapshot] > wcag2aaa (subtle, lg, disabled, open) 1`] = `
<div
  aria-hidden="true"
  data-aria-hidden="true"
>
  <div
    aria-controls="radix-_r_2r_"
    aria-expanded="true"
    aria-haspopup="menu"
    class="vesper-split-button"
    data-state="open"
    id="radix-_r_2q_"
    type="button"
  >
    <button
      class="vesper-button vesper-button-lg vesper-button-disabled"
      disabled=""
    >
      button text
    </button>
    <button
      aria-label="Toggle menu"
      class="vesper-button vesper-button-lg vesper-button-disabled vesper-icon-button"
      disabled=""
    >
      <span
        class="vesper-button-icon"
      >
        <svg
          class="vesper-split-button-caret-down"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.05859 8L10.8984 14.8291L13.1016 14.8291L19.9414 8L21 9.05664L13.7217 16.3242L10.2783 16.3242L3 9.05664L4.05859 8Z"
            fill="currentColor"
          />
        </svg>
        <svg
          class="vesper-split-button-caret-up"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19.9414 16.3242L13.1016 9.49512L10.8984 9.49512L4.05859 16.3242L3 15.2676L10.2783 8L13.7217 8L21 15.2676L19.9414 16.3242Z"
            fill="currentColor"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`split-button [snapshot] > wcag2aaa (subtle, lg, open) 1`] = `
<div
  aria-hidden="true"
  data-aria-hidden="true"
>
  <div
    aria-controls="radix-_r_2i_"
    aria-expanded="true"
    aria-haspopup="menu"
    class="vesper-split-button"
    data-state="open"
    id="radix-_r_2h_"
    type="button"
  >
    <button
      class="vesper-button vesper-button-lg vesper-button-subtle"
    >
      button text
    </button>
    <button
      aria-label="Toggle menu"
      class="vesper-button vesper-button-lg vesper-button-subtle vesper-icon-button"
    >
      <span
        class="vesper-button-icon"
      >
        <svg
          class="vesper-split-button-caret-down"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.05859 8L10.8984 14.8291L13.1016 14.8291L19.9414 8L21 9.05664L13.7217 16.3242L10.2783 16.3242L3 9.05664L4.05859 8Z"
            fill="currentColor"
          />
        </svg>
        <svg
          class="vesper-split-button-caret-up"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19.9414 16.3242L13.1016 9.49512L10.8984 9.49512L4.05859 16.3242L3 15.2676L10.2783 8L13.7217 8L21 15.2676L19.9414 16.3242Z"
            fill="currentColor"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`split-button [snapshot] > wcag2aaa (subtle, md) 1`] = `
<div>
  <div
    aria-expanded="false"
    aria-haspopup="menu"
    class="vesper-split-button"
    data-state="closed"
    id="radix-_r_1t_"
    type="button"
  >
    <button
      class="vesper-button vesper-button-md vesper-button-subtle"
    >
      button text
    </button>
    <button
      aria-label="Toggle menu"
      class="vesper-button vesper-button-md vesper-button-subtle vesper-icon-button"
    >
      <span
        class="vesper-button-icon"
      >
        <svg
          class="vesper-split-button-caret-down"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.05859 8L10.8984 14.8291L13.1016 14.8291L19.9414 8L21 9.05664L13.7217 16.3242L10.2783 16.3242L3 9.05664L4.05859 8Z"
            fill="currentColor"
          />
        </svg>
        <svg
          class="vesper-split-button-caret-up"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19.9414 16.3242L13.1016 9.49512L10.8984 9.49512L4.05859 16.3242L3 15.2676L10.2783 8L13.7217 8L21 15.2676L19.9414 16.3242Z"
            fill="currentColor"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`split-button [snapshot] > wcag2aaa (subtle, md, disabled) 1`] = `
<div>
  <div
    aria-expanded="false"
    aria-haspopup="menu"
    class="vesper-split-button"
    data-state="closed"
    id="radix-_r_26_"
    type="button"
  >
    <button
      class="vesper-button vesper-button-md vesper-button-disabled"
      disabled=""
    >
      button text
    </button>
    <button
      aria-label="Toggle menu"
      class="vesper-button vesper-button-md vesper-button-disabled vesper-icon-button"
      disabled=""
    >
      <span
        class="vesper-button-icon"
      >
        <svg
          class="vesper-split-button-caret-down"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.05859 8L10.8984 14.8291L13.1016 14.8291L19.9414 8L21 9.05664L13.7217 16.3242L10.2783 16.3242L3 9.05664L4.05859 8Z"
            fill="currentColor"
          />
        </svg>
        <svg
          class="vesper-split-button-caret-up"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19.9414 16.3242L13.1016 9.49512L10.8984 9.49512L4.05859 16.3242L3 15.2676L10.2783 8L13.7217 8L21 15.2676L19.9414 16.3242Z"
            fill="currentColor"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`split-button [snapshot] > wcag2aaa (subtle, md, disabled, open) 1`] = `
<div
  aria-hidden="true"
  data-aria-hidden="true"
>
  <div
    aria-controls="radix-_r_29_"
    aria-expanded="true"
    aria-haspopup="menu"
    class="vesper-split-button"
    data-state="open"
    id="radix-_r_28_"
    type="button"
  >
    <button
      class="vesper-button vesper-button-md vesper-button-disabled"
      disabled=""
    >
      button text
    </button>
    <button
      aria-label="Toggle menu"
      class="vesper-button vesper-button-md vesper-button-disabled vesper-icon-button"
      disabled=""
    >
      <span
        class="vesper-button-icon"
      >
        <svg
          class="vesper-split-button-caret-down"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.05859 8L10.8984 14.8291L13.1016 14.8291L19.9414 8L21 9.05664L13.7217 16.3242L10.2783 16.3242L3 9.05664L4.05859 8Z"
            fill="currentColor"
          />
        </svg>
        <svg
          class="vesper-split-button-caret-up"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19.9414 16.3242L13.1016 9.49512L10.8984 9.49512L4.05859 16.3242L3 15.2676L10.2783 8L13.7217 8L21 15.2676L19.9414 16.3242Z"
            fill="currentColor"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`split-button [snapshot] > wcag2aaa (subtle, md, open) 1`] = `
<div
  aria-hidden="true"
  data-aria-hidden="true"
>
  <div
    aria-controls="radix-_r_20_"
    aria-expanded="true"
    aria-haspopup="menu"
    class="vesper-split-button"
    data-state="open"
    id="radix-_r_1v_"
    type="button"
  >
    <button
      class="vesper-button vesper-button-md vesper-button-subtle"
    >
      button text
    </button>
    <button
      aria-label="Toggle menu"
      class="vesper-button vesper-button-md vesper-button-subtle vesper-icon-button"
    >
      <span
        class="vesper-button-icon"
      >
        <svg
          class="vesper-split-button-caret-down"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.05859 8L10.8984 14.8291L13.1016 14.8291L19.9414 8L21 9.05664L13.7217 16.3242L10.2783 16.3242L3 9.05664L4.05859 8Z"
            fill="currentColor"
          />
        </svg>
        <svg
          class="vesper-split-button-caret-up"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19.9414 16.3242L13.1016 9.49512L10.8984 9.49512L4.05859 16.3242L3 15.2676L10.2783 8L13.7217 8L21 15.2676L19.9414 16.3242Z"
            fill="currentColor"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`split-button [snapshot] > wcag2aaa (subtle, sm) 1`] = `
<div>
  <div
    aria-expanded="false"
    aria-haspopup="menu"
    class="vesper-split-button"
    data-state="closed"
    id="radix-_r_1b_"
    type="button"
  >
    <button
      class="vesper-button vesper-button-sm vesper-button-subtle"
    >
      button text
    </button>
    <button
      aria-label="Toggle menu"
      class="vesper-button vesper-button-sm vesper-button-subtle vesper-icon-button"
    >
      <span
        class="vesper-button-icon"
      >
        <svg
          class="vesper-split-button-caret-down"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.05859 8L10.8984 14.8291L13.1016 14.8291L19.9414 8L21 9.05664L13.7217 16.3242L10.2783 16.3242L3 9.05664L4.05859 8Z"
            fill="currentColor"
          />
        </svg>
        <svg
          class="vesper-split-button-caret-up"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19.9414 16.3242L13.1016 9.49512L10.8984 9.49512L4.05859 16.3242L3 15.2676L10.2783 8L13.7217 8L21 15.2676L19.9414 16.3242Z"
            fill="currentColor"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`split-button [snapshot] > wcag2aaa (subtle, sm, disabled) 1`] = `
<div>
  <div
    aria-expanded="false"
    aria-haspopup="menu"
    class="vesper-split-button"
    data-state="closed"
    id="radix-_r_1k_"
    type="button"
  >
    <button
      class="vesper-button vesper-button-sm vesper-button-disabled"
      disabled=""
    >
      button text
    </button>
    <button
      aria-label="Toggle menu"
      class="vesper-button vesper-button-sm vesper-button-disabled vesper-icon-button"
      disabled=""
    >
      <span
        class="vesper-button-icon"
      >
        <svg
          class="vesper-split-button-caret-down"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.05859 8L10.8984 14.8291L13.1016 14.8291L19.9414 8L21 9.05664L13.7217 16.3242L10.2783 16.3242L3 9.05664L4.05859 8Z"
            fill="currentColor"
          />
        </svg>
        <svg
          class="vesper-split-button-caret-up"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19.9414 16.3242L13.1016 9.49512L10.8984 9.49512L4.05859 16.3242L3 15.2676L10.2783 8L13.7217 8L21 15.2676L19.9414 16.3242Z"
            fill="currentColor"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`split-button [snapshot] > wcag2aaa (subtle, sm, disabled, open) 1`] = `
<div
  aria-hidden="true"
  data-aria-hidden="true"
>
  <div
    aria-controls="radix-_r_1n_"
    aria-expanded="true"
    aria-haspopup="menu"
    class="vesper-split-button"
    data-state="open"
    id="radix-_r_1m_"
    type="button"
  >
    <button
      class="vesper-button vesper-button-sm vesper-button-disabled"
      disabled=""
    >
      button text
    </button>
    <button
      aria-label="Toggle menu"
      class="vesper-button vesper-button-sm vesper-button-disabled vesper-icon-button"
      disabled=""
    >
      <span
        class="vesper-button-icon"
      >
        <svg
          class="vesper-split-button-caret-down"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.05859 8L10.8984 14.8291L13.1016 14.8291L19.9414 8L21 9.05664L13.7217 16.3242L10.2783 16.3242L3 9.05664L4.05859 8Z"
            fill="currentColor"
          />
        </svg>
        <svg
          class="vesper-split-button-caret-up"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19.9414 16.3242L13.1016 9.49512L10.8984 9.49512L4.05859 16.3242L3 15.2676L10.2783 8L13.7217 8L21 15.2676L19.9414 16.3242Z"
            fill="currentColor"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`split-button [snapshot] > wcag2aaa (subtle, sm, open) 1`] = `
<div
  aria-hidden="true"
  data-aria-hidden="true"
>
  <div
    aria-controls="radix-_r_1e_"
    aria-expanded="true"
    aria-haspopup="menu"
    class="vesper-split-button"
    data-state="open"
    id="radix-_r_1d_"
    type="button"
  >
    <button
      class="vesper-button vesper-button-sm vesper-button-subtle"
    >
      button text
    </button>
    <button
      aria-label="Toggle menu"
      class="vesper-button vesper-button-sm vesper-button-subtle vesper-icon-button"
    >
      <span
        class="vesper-button-icon"
      >
        <svg
          class="vesper-split-button-caret-down"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.05859 8L10.8984 14.8291L13.1016 14.8291L19.9414 8L21 9.05664L13.7217 16.3242L10.2783 16.3242L3 9.05664L4.05859 8Z"
            fill="currentColor"
          />
        </svg>
        <svg
          class="vesper-split-button-caret-up"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19.9414 16.3242L13.1016 9.49512L10.8984 9.49512L4.05859 16.3242L3 15.2676L10.2783 8L13.7217 8L21 15.2676L19.9414 16.3242Z"
            fill="currentColor"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;
